--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -9,7 +9,7 @@
             <h1 id="GUVRS_PLAYER_NAME">{{ GUVRS_PLAYER_NAME }}</h1>
             <div class="data-row">
                 <span class="data-label">Guid:</span>
-                <span class="data-value"><a id="GUVRS_PLAYER_GUID" title="Click to open deck in gudecks.com" class="guid" href="javascript:void(0)">{{ GUVRS_PLAYER_GUID }}</a> <i title="Click to copy guid to clipboard" class="fas fa-copy copy-icon"></i></span>
+                <span class="data-value"><a id="GUVRS_PLAYER_GUID" title="Click to open deck in gudecks.com" class="guid" href="javascript:void(0)">{{ GUVRS_PLAYER_GUID }}</a> <a id="GUVRS_PLAYER_GUID_COPY" class="copy" href="javascript:void(0)"><i title="Click to copy guid to clipboard" class="fas fa-copy copy-icon"></i></a></span>
             </div>
             <div class="data-row">
                 <span class="data-label">Rating:</span>
@@ -29,7 +29,7 @@
             <h1 id="GUVRS_OPPONENT_NAME">{{ GUVRS_OPPONENT_NAME }}</h1>
             <div class="data-row">
                 <span class="data-label">Guid:</span>
-                <span class="data-value"><a id="GUVRS_OPPONENT_GUID" title="Click to open deck in gudecks.com" class="guid" href="javascript:void(0)">{{ GUVRS_OPPONENT_GUID }}</a> <i title="Click to copy guid to clipboard" class="fas fa-copy copy-icon"></i></span>
+                <span class="data-value"><a id="GUVRS_OPPONENT_GUID" title="Click to open deck in gudecks.com" class="guid" href="javascript:void(0)">{{ GUVRS_OPPONENT_GUID }}</a> <a id="GUVRS_OPPONENT_GUID_COPY" class="copy" href="javascript:void(0)"><i title="Click to copy guid to clipboard" class="fas fa-copy copy-icon"></i></a></span>
             </div>
             <div class="data-row">
                 <span class="data-label">Rating:</span>
