--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -69,7 +69,9 @@
                 </label>
             </div>
         </div>
-
+        <div class="setting-row">
+            <button id="settings-open-folder">Open Data Folder</button>
+        </div>
         <div class="button-row">
             <button id="save-settings">Save</button>
             <button id="cancel-settings">Cancel</button>
