--- a/GUvrs/Views/Shared/footer.mustache
+++ b/GUvrs/Views/Shared/footer.mustache
@@ -33,6 +33,10 @@
             document.getElementById('settings-overlay').style.display = 'none';
         });
 
+        document.getElementById('settings-open-folder').addEventListener('click', function () {
+            location.href = "guvrs://open-settings-folder";
+        });
+
         document.getElementById('save-settings').addEventListener('click', function () {
             document.getElementById('settings-overlay').style.display = 'none';
             location.href = `guvrs://save-settings?theme=${document.getElementById('dropdown-setting').value}&auto-open=${document.getElementById('auto-open-toggle').checked}`;
