Add support for GUmeta

--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -61,6 +61,13 @@
             </select>
         </div>
         <div class="setting-row">
+            <label for="dropdown-setting-site">Site:</label>
+            <select id="dropdown-setting-site">
+                <option value="gudecks">GU decks</option>
+                <option value="gumeta">GU meta</option>
+            </select>
+        </div>
+        <div class="setting-row">
             <div class="toggle-container">
                 <input type="checkbox" id="auto-open-toggle" class="toggle-input">
                 <label for="auto-open-toggle" class="toggle-label">
