--- a/GUvrs/Views/Shared/header.mustache
+++ b/GUvrs/Views/Shared/header.mustache
@@ -55,9 +55,12 @@
 
         .pane {
             width: 50%;
+            max-width: 50%;
             box-sizing: border-box;
             padding: 20px;
             border-left: none;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
         }
 
         #player1 {
