Added Friends Button

--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -1,6 +1,7 @@
 ﻿<div class="container">
     <div class="header">
-        Game Id: <span id="GUVRS_GAME_ID">{{ GUVRS_GAME_ID }}</span>
+        <button class="friends-btn"><i title="Click to open friends window" class="fa-solid fa-user"></i></button>
+        <div class="game-id">Game Id: <span id="GUVRS_GAME_ID">{{ GUVRS_GAME_ID }}</span></div>
         <button class="settings-btn"><i title="Click to open settings window" class="fas fa-cog"></i></button>
     </div>
 
