--- a/GUvrs/Views/Shared/header.mustache
+++ b/GUvrs/Views/Shared/header.mustache
@@ -100,6 +100,25 @@
             color: black;
         }
 
+        .friends-btn {
+            position: relative;
+            margin-top: -10px;
+            background-color: transparent;
+            border: none;
+            color: #fff;
+            font-size: 24px;
+            cursor: pointer;
+            float: left;
+        }
+
+        .friends-btn:focus {
+             outline: none;
+            }
+
+        .game-id {
+             width: 95%;
+            }
+
         .settings-btn {
             position: absolute;
             top: 10px;
