Added Friends Window Added Friends Button Functionality

--- a/GUvrs/Views/Shared/header.mustache
+++ b/GUvrs/Views/Shared/header.mustache
@@ -204,6 +204,21 @@
             z-index: 1000;
         }
 
+        .friends-modal {
+            width: 300px;
+            background-color: #fff;
+            padding: 20px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .friend-row {
+            margin-bottom: 15px;
+        }
+
         .settings-modal {
             width: 300px;
             background-color: #fff;
