--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -52,6 +52,16 @@
     </div>
 </div>
 
+<div class="overlay" id="friends-overlay">
+    <div class="friends-modal">
+        <h2>Friends</h2>
+        <div class="button-row">
+            <button id="save-friends">Save</button>
+            <button id="cancel-friends">Cancel</button>
+        </div>
+    </div>
+</div>
+
 <div class="overlay" id="settings-overlay">
     <div class="settings-modal">
         <h2>Settings</h2>
