--- a/GUvrs/Views/Shared/footer.mustache
+++ b/GUvrs/Views/Shared/footer.mustache
@@ -58,6 +58,19 @@
             document.getElementById(`${key}_COPY`).href = `guvrs://copy?guid=${value}`;
         }
 
+        document.querySelector('.friends-btn').addEventListener('click', function () {
+            document.getElementById('friends-overlay').style.display = 'block';
+        });
+
+        document.getElementById('cancel-friends').addEventListener('click', function () {
+            document.getElementById('friends-overlay').style.display = 'none';
+        });
+
+        document.getElementById('save-friends').addEventListener('click', function () {
+            document.getElementById('friends-overlay').style.display = 'none';
+            location.href = `guvrs://save-friends`;
+        });
+
         document.querySelector('.settings-btn').addEventListener('click', function () {
             document.getElementById('settings-overlay').style.display = 'block';
         });
