--- a/GUvrs/Views/Shared/header.mustache
+++ b/GUvrs/Views/Shared/header.mustache
@@ -28,6 +28,14 @@
             flex-direction: column;
         }
 
+        .centered-h2 {
+            position: relative;
+            top: -15px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
         .header {
             background-color: #333;
             color: #fff;
@@ -216,7 +224,11 @@
         }
 
         .friend-row {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
+        }
+
+        #friend-errors{
+            color: red;
         }
 
         .settings-modal {
