--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -55,6 +55,9 @@
 <div class="overlay" id="friends-overlay">
     <div class="friends-modal">
         <h2 class="centered-h2">Friends</h2>
+        <div class="friend-row">
+            You have no friends :c
+        </div>
         <div class="button-row">
             <button id="add-friend">Add Friend</button>
             <button id="cancel-friends">Cancel</button>
