--- a/GUvrs/Views/Shared/header.mustache
+++ b/GUvrs/Views/Shared/header.mustache
@@ -264,6 +264,33 @@
             margin-top: 10px;
             cursor: pointer;
         }
+
+        #has-friends {
+            display: none;
+        }
+
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        th, td {
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2
+        }
+
+        th {
+            background-color: orange;
+            color: white;
+        }
+
+        .fa-xmark {
+            color: red;
+        }
     </style>
 </head>
 
