Populated Friends in javascript.

--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -56,7 +56,7 @@
     <div class="friends-modal">
         <h2 class="centered-h2">Friends</h2>
         <div id="no-friends" class="friend-row">
-            You have no friends :c
+            You have no friends :c <br/>
         </div>
         <div id="has-friends" class="friend-row">
             <table>
