Add display fixes, and render table with friends.

--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -59,20 +59,12 @@
             You have no friends :c <br/>
         </div>
         <div id="has-friends" class="friend-row">
-            <table>
+            <table id="friends">
                 <tr>
                     <th>Action</th>
                     <th>Name</th>
                     <th>User Id</th>
                 </tr>
-                <tr>
-                    <td>
-                        <i class="fa-solid fa-xmark"></i>
-                    </td>
-                    <td>Bird</td>
-                    <td>1234</td>
-                </tr>
-
             </table>
         </div>
 
