--- a/GUvrs/Views/Shared/footer.mustache
+++ b/GUvrs/Views/Shared/footer.mustache
@@ -119,7 +119,7 @@
         }
 
         function guvrs_show_friends() {
-            document.getElementById('no-friends').style.display = 'none';
+            document.getElementById('no-friends').style.display = 'none'; 
             document.getElementById('has-friends').style.display = 'block';
         }
 
@@ -133,7 +133,7 @@
                 var name = row.insertCell(1);
                 var guid = row.insertCell(2);
 
-                actions.innerHTML = "<i class=\"fa-solid fa-xmark\"></i>";
+                actions.innerHTML = "<a href=\"#\"><i class=\"fa-solid fa-xmark\"></i></a>";
                 name.innerHTML = friends[index].Name;
                 guid.innerHTML = friends[index].Guid;
             }
