Add some minor css clean up

--- a/GUvrs/Views/MainPage/index.mustache
+++ b/GUvrs/Views/MainPage/index.mustache
@@ -63,7 +63,7 @@
                 <tr>
                     <th>Action</th>
                     <th>Name</th>
-                    <th>User Id</th>
+                    <th>Guid</th>
                 </tr>
             </table>
         </div>
