--- a/GUvrs/Views/Shared/header.mustache
+++ b/GUvrs/Views/Shared/header.mustache
@@ -210,12 +210,12 @@
             height: 100%;
             background-color: rgba(0, 0, 0, 0.7);
             z-index: 1000;
-            overflow: auto;
         }
 
         .friends-modal {
             width: 300px;
             max-width: 300px;
+            max-height: 300px;
             background-color: #fff;
             padding: 20px;
             position: absolute;
@@ -223,6 +223,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            overflow: auto;
         }
 
         .friend-row {
